Fix menu items and logo overlap by adding a parent flex container

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ h3 {
 	height: 156px;
 }
 
-.menu-items ul li {
+.menu-container ul li {
 	margin-bottom: 18px;
 	font-size: 36px;
 	font-weight: 900;
@@ -82,25 +82,25 @@ h3 {
 	cursor: pointer;
 }
 
-.menu-items .logo {
-	position:fixed;
-	top: 0;
-	left: 0;
-}
-
-.navbar .menu-items {
+.navbar .menu-container {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
+	display: flex;
+	flex-direction: column;
 	visibility: hidden;
 	overflow: hidden;
+	opacity: 0;
+	background-color: #ffffff;
+}
+
+.menu-items {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	opacity: 0;
-	background-color: #ffffff;
+	margin: auto;
 }
 
 .nav-container .hamburger-lines .line1 {
@@ -129,11 +129,11 @@ h3 {
 	transform: rotate(-45deg);
 }
 
-.nav-container input[type="checkbox"]:checked ~ .menu-items {
+.nav-container input[type="checkbox"]:checked ~ .menu-container {
 	visibility: visible;
 }
 
-.nav-container input[type="checkbox"]:checked ~ .menu-items {
+.nav-container input[type="checkbox"]:checked ~ .menu-container {
 	opacity: 1;
 	transition:  opacity .7s;
 }
